# V02ACameraTest

./: build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  NdkCamera.cpp  NdkCamera.h  android_main.cpp  native_debug.h
app/src/main/java/com/ssnwt/camera/: CameraActivity.java  MainActivity.java  NDKCameraActivity.java  PermissionActivity.java
app/src/main/java/com/ssnwt/camera/camera/: CameraState.java  OnFrameAvailableListener.java  RawCamera.java
app/src/main/res/layout/: activity_camera.xml  activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
